state before implementing AJAX

--- a/base/templates/base/war.html
+++ b/base/templates/base/war.html
@@ -31,5 +31,7 @@
             <button type="submit" class="buttons" id="play-button">Play Next Card</button>
         </form>
     </div>
+
+    <script src="{% static 'js/play_button.js' %}"></script>
 </body>
 {% endblock content %}
