--- a/base/templates/base/war.html
+++ b/base/templates/base/war.html
@@ -9,9 +9,7 @@
         </form>
     </div>
     
-    <div class="gamename">
-        War Game
-    </div>
+    <div class="gamename">War Game</div>
     
     <div class="war-playboard">
         <div>
