Poker game improved + visuals

--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -1,3 +1,16 @@
 {% include 'main.html' %}
 {% block content %}
+<div id="login-register">
+    <form method="POST">
+        {% csrf_token %}
+        <label>email:</label>
+        <input>
+        <label>username:</label>
+        <input>
+        <label>password:</label>
+        <input>
+        <label>repeat password:</label>
+        <input>
+    </form>
+</div>
 {% endblock content %}
