--- a/base/templates/base/poker.html
+++ b/base/templates/base/poker.html
@@ -5,7 +5,7 @@
     
     <!-- for later -->
     <div style="text-align: right; margin-right: 1px;">
-        <form method="post" action="{% url 'poker' %}">
+        <form method="GET" action="{% url 'poker' %}">
             {% csrf_token %}
             <button type="submit" class="buttons" id="reset-button">Reset Game</button>
         </form>
@@ -17,18 +17,30 @@
 
     <div class="poker-playboard">
         <div class="hand">
-            {% for card in my_hand %}
+            <img id = 'enemy_card1_image' src="{% static 'images/cards/green_back.png' %}" class="poker-card"> 
+            <img id = 'enemy_card2_image' src="{% static 'images/cards/green_back.png' %}" class="poker-card"> 
+        </div>
+        <!-- <div class="hand">
+            {% for card in enemy_hand %}
             <img src="{% static card.image %}" class="poker-card"> 
             {% endfor %}
-        </div>
-        <div class="poker-comb">
-            {{ my_comb }}
-        </div>
-        <div class="poker-result">
-            {{ my_result }}
-        </div>
+        </div> -->
+        <div class="poker-comb" id='enemy-comb'></div>
+        <div class="poker-result" id='enemy-result'></div>
+
         <div class="table-cards">
             <div class="flop">
+                <img id='card1' src="{% static 'images/cards/green_back.png' %}" class="poker-card"> 
+                <img id='card2' src="{% static 'images/cards/green_back.png' %}" class="poker-card"> 
+                <img id='card3' src="{% static 'images/cards/green_back.png' %}" class="poker-card"> 
+            </div>
+            <div>
+                <img id='card4' src="{% static 'images/cards/green_back.png' %}" class="poker-card"> 
+            </div>
+            <div>
+                <img id='card5' src="{% static 'images/cards/green_back.png' %}" class="poker-card"> 
+            </div>
+            <!-- <div class="flop">
                 {% for card in flop %}
                 <img src="{% static card.image %}" class="poker-card"> 
                 {% endfor %}
@@ -38,20 +50,26 @@
             </div>
             <div>
                 <img src="{% static river.image %}" class="poker-card"> 
-            </div>
+            </div> -->
         </div>
-        <div class="poker-result">
-            {{ enemy_result }}
-        </div>
-        <div class="poker-comb">
-            {{ enemy_comb }}
-        </div>
+        
+        <div class="poker-result" id='my-result'></div>
+        <div class="poker-comb" id='my-comb'></div>
+        
         <div class="hand">
-            {% for card in enemy_hand %}
+            {% for card in my_hand %}
             <img src="{% static card.image %}" class="poker-card"> 
             {% endfor %}
         </div>
     </div>
+
+    <div class="decision-buttons-container">
+        <button class="decision-button" id="fold-button">Fold</button>
+        <button class="decision-button" id="call-button" onclick="call()">Call</button>
+        <button class="decision-button" id="raise-button">Raise</button>
+    </div>
+
+    <script src="{% static 'js/poker_ajax.js' %}"></script>
 </body>
 
 {% endblock content %}
