--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,13 +1,22 @@
 <div id="navbar">
+   <div id="username-navbar">
+    {% if request.user.is_authenticated %}
+        <a>{{request.user}}</a>
+    {% endif %}
+   </div>    
     <div id="title">
         <a href="{% url 'home' %}">PokWar</a>
     </div>
-    <div id="login-register">
-        <div class="login-register">  
-            <a href="{% url 'login' %}">login</a>
+    <div id="login-register-navbar">
+        <div class="login-register-navbar">  
+            {% if request.user.is_authenticated %}
+            <a href="{% url 'logout' %}">Logout</a>
+            {% else %}
+            <a href="{% url 'login' %}">Login</a>
+            {% endif %}
         </div> 
-        <div class="login-register"> 
-            <a href="{% url 'register' %}">register</a>
+        <div class="login-register-navbar"> 
+            <a href="{% url 'register' %}">Register</a>
         </div> 
     </div>
 </div>
