--- a/base/templates/base/poker.html
+++ b/base/templates/base/poker.html
@@ -11,10 +11,15 @@
         </form>
     </div>
 
-    <div class="gamename">
+    <!-- <div class="gamename">
         Poker Game
-    </div>
+    </div> -->
 
+    <div class="player-balance">
+        <span id="enemy-balance">{{enemy_balance}}</span> 
+        <img src="{% static 'images/poker-chip.png' %}" class="poker-chip"> 
+    </div>
+    
     <div class="poker-playboard">
         <div class="hand">
             <img id = 'enemy_card1_image' src="{% static 'images/cards/green_back.png' %}" class="poker-card"> 
@@ -42,10 +47,13 @@
         <div class="poker-comb" id='my-comb'>&nbsp;</div>
         
         <div class="hand">
-            {% for card in my_hand %}
-            <img src="{% static card.image %}" class="poker-card"> 
-            {% endfor %}
+            <img id = 'my_card1_image' src="{% static my_card1_image %}" class="poker-card"> 
+            <img id = 'my_card2_image' src="{% static my_card2_image %}" class="poker-card"> 
         </div>
+    </div>
+    <div class="player-balance">
+        <span id="my-balance">{{my_balance}}</span> 
+        <img src="{% static 'images/poker-chip.png' %}" class="poker-chip"> 
     </div>
 
     <div class="decision-buttons-container">
