--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -313,6 +313,38 @@ a{
     background: linear-gradient(to right, #8b6508, #ffd700);
 }
 
+.raise-container {
+    position: relative;
+    display: inline-block;
+}
+
+.raise-slider-wrapper {
+    display: inline-block;
+    position: absolute;
+    bottom: 0;
+    width: 30px;
+    left: 110%;
+    background-color: rgba(0, 0, 0, 0.75);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(255, 215, 0, 0.5);
+    text-align: center;
+}
+
+.raise-slider-wrapper input[type="range"] {
+    writing-mode: bt-lr; /* vertical */
+    -webkit-appearance: slider-vertical;
+    width: 8px;
+    height: 100px;
+    margin: 0 auto;
+}
+
+.raise-slider-wrapper #raise-value {
+    color: white;
+    margin-top: 10px;
+    font-size: 14px;
+}
+
 .decision-buttons-container button:hover {
     filter: brightness(1.2);
     transform: scale(1.1);
