raise function finished

--- a/base/templates/base/poker.html
+++ b/base/templates/base/poker.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         
-        <div class="poker-result" id='my-result'>&nbsp;</div>
+        <div class="poker-result" id='total-pot'>{{total_pot}}</div>
         <div class="poker-comb" id='my-comb'>&nbsp;</div>
         
         <div class="hand">
