added responsibility handling for home and results

--- a/base/templates/base/defeat.html
+++ b/base/templates/base/defeat.html
@@ -1,8 +1,10 @@
 {% include 'main.html' %}
 {% block content %}
-    <div class="result-box" id="defeat-box">
-        <div>
-            You Lost!
+    <div class="result-wrapper">    
+        <div class="result-box" id="defeat-box">
+            <div>
+                You Lost!
+            </div>
         </div>
     </div>
 {% endblock content %}
