--- a/base/templates/base/victory.html
+++ b/base/templates/base/victory.html
@@ -1,8 +1,10 @@
 {% include 'main.html' %}
 {% block content %}
-    <div class="result-box" id="victory-box">
-        <div>
-            You Won!
+    <div class="result-wrapper">
+        <div class="result-box" id="victory-box">
+            <div>
+                You Won!
+            </div>
         </div>
     </div>
 {% endblock content %}
