--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -92,7 +92,7 @@ a{
 
 #login-register {
     width: 320px;
-    margin: 100px auto;
+    margin: 10.88vh auto;
     padding: 25px;
     padding-bottom: 7px;
     background-color: #333;
@@ -289,63 +289,69 @@ a{
     100%{transform: rotateY(1080deg)}
 }
 
+/* poker */
+#poker-container{
+    height: 88vh;
+}
+
 /* poker-cards */
 .poker-card{
-    max-width: 100px;
+    max-width: 11.2vh;
+    aspect-ratio: 691 / 1056;
+    object-fit: contain;
     height: auto;
 }
 .hand{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 5px;
+    gap: 0.75vh;
 }
 .poker-result{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px;
+    padding: 1vh;
+    font-size: 1.9vh;
     font-weight: bold;
-}
-.flop{
-    display: flex;
-    gap: 20px;
 }
 .table-cards{
     display: flex;
     justify-content: center;
-    align-items: center;
-    gap: 20px;
+    align-items:flex-end;
+    gap: 2.18vh;
 }
 .poker-comb{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px;
+    font-size: 1.74vh;
+    padding: 1vh;
 }
+
 .poker-chip{
-    max-width: 33px;
+    max-width: 3.5vh;
     height: auto;
-    margin-left: 7px;
-    margin-top: 8px;
-    margin-bottom: 8px;
+    margin-left: 0.76vh;
+    margin-top: 0.87vh;
+    margin-bottom: 0.87vh;
 }
 /* poker-buttons */
 .decision-buttons-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-    padding: 3px;
+    gap: 2.18vh;
+    padding: 0.33vh;
 }
 
 .decision-buttons-container button {
-    font-size: 1.5em;
+    font-size: 2.61vh;
     font-weight: bold;
     color: white;
     border: none;
-    padding: 15px 40px;
-    border-radius: 50px;
+    padding: 1.5vh 4.35vh;
+    border-radius: 5.44vh;
     cursor: pointer;
     transition: 0.3s;
     text-transform: uppercase;
@@ -372,27 +378,27 @@ a{
     display: inline-block;
     position: absolute;
     bottom: 0;
-    width: 30px;
+    width: 3.26vh;
     left: 110%;
     background-color: rgba(0, 0, 0, 0.75);
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(255, 215, 0, 0.5);
+    padding: 1.09vh;
+    border-radius: 1.09vh;
+    box-shadow: 0vh 0vh 1.09vh rgba(255, 215, 0, 0.5);
     text-align: center;
 }
 
 .raise-slider-wrapper input[type="range"] {
     writing-mode: vertical-lr;
     direction: rtl;
-    width: 8px;
-    height: 100px;
+    width: 0.87vh;
+    height: 10.88vh;
     margin: 0 auto;
 }
 
 .raise-slider-wrapper #raise-value {
     color: white;
-    margin-top: 10px;
-    font-size: 14px;
+    margin-top: 1.09vh;
+    font-size: 1.52vh;
 }
 
 .decision-buttons-container button:hover {
@@ -404,9 +410,11 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2em;
+    font-size: 3.5vh;
     font-weight: bolder;
-    margin: 10px;
+    margin: 1.09vh;
+    margin-bottom: 0.85vh;
+    margin-top: 0.85vh;
 }
 
 /* animations */
